# printf

./: CMakeLists.txt  Makefile
ft_printf/: char.c  char_unicode.c  check_funcs.c  format_write_funcs.c  get_var_param.c  octodecimal.c  string.c
includes/: ft_printf.h  libft.h
test/: author  ft_strsplit.c
test/ft_printf/: decimal.c  ft_printf.c  hexadecimal.c  percent.c  pointer.c  print_type.c  service_funcs.c  type_processing.c  unsigned.c
